FixVisualProblems: Fixed alignment issue with widgets by using flex gap and moved language away from edge of screen.

--- a/css/components/dashboard/GraphWidget.css
+++ b/css/components/dashboard/GraphWidget.css
@@ -3,7 +3,6 @@
   background-color: white;
   height: 210px;
   width: 500px;
-  margin-left: 70px;
   display: flex;
   flex-direction: column;
   justify-content: center;
